--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - "traefik.http.routers.wikijs.rule=Host(`flexget.gazpachoking.net`)"
       #- "traefik.http.routers.wikijs.rule=Host(`flexget.com`)||Host(`www.flexget.com`)"
       - "traefik.http.routers.wikijs.tls=true"
-      - "traefik.http.routers.wikijs.tls.certresolver=le"
+      - "traefik.http.routers.wikijs.tls.certresolver=le-prod"
       - "traefik.http.routers.wikijs.entrypoints=websecure"
   traefik:
     image: "traefik:v2.8"
@@ -43,13 +43,16 @@ services:
       - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
-      - "--certificatesresolvers.le.acme.email=${TRAEFIK_SSLEMAIL?Variable not set}"
-      - "--certificatesresolvers.le.acme.storage=acme.json"
-      - "--certificatesresolvers.le.acme.tlschallenge=true"
       # staging server
-      #- "--certificatesresolvers.le.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
+      - "--certificatesresolvers.le-staging.acme.email=${TRAEFIK_SSLEMAIL?Variable not set}"
+      - "--certificatesresolvers.le-staging.acme.storage=acme.json"
+      - "--certificatesresolvers.le-staging.acme.tlschallenge=true"
+      - "--certificatesresolvers.le-staging.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
       # production server
-      - "--certificatesresolvers.le.acme.caserver=https://acme-v02.api.letsencrypt.org/directory"
+      - "--certificatesresolvers.le-prod.acme.email=${TRAEFIK_SSLEMAIL?Variable not set}"
+      - "--certificatesresolvers.le-prod.acme.storage=acme.json"
+      - "--certificatesresolvers.le-prod.acme.tlschallenge=true"
+      - "--certificatesresolvers.le-prod.acme.caserver=https://acme-v02.api.letsencrypt.org/directory"
     ports:
       - "80:80"
       - "443:443"
