--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,8 @@ services:
       DB_PASS: ${POSTGRES_PASSWORD}
       DB_NAME: ${POSTGRES_DB}
     volumes:
-      - ./favicons/favicon.ico:/wiki/assets/favicon.ico
+      - ./favicons:/wiki/assets/favicons
+      - ./favicons/site.webmanifest:/wiki/assets/manifest.json
     restart: unless-stopped
 #    ports:
 #      - "3000:3000"
